# aut_v0_8

./: .gitignore  CMakeLists.txt  OUTPUT_STAGE_LAB_V1.md  OUTPUT_STAGE_LAB_V2.md  OUTPUT_STAGE_LAB_V3_ALPHA.md  OUTPUT_STAGE_V3_CPP_INTEGRATION.md  README_SCALE_LOCK_V2.md  README_SCALE_LOCK_V2_FIXED.md
.github/workflows/: apply-stage-b-patch.yml  apply-stage-c-payload.yml  linux.yml  output-lab-v3.yml  output-v3-scaffold.yml  output-v3-shadow-ledger.yml  windows.yml
OutputLab/: CHECKSUMS.txt  README.md  RESTORE.md  V2_CHECKSUMS.txt  V3_ALPHA_PLAN.md  V3_CHECKSUMS.txt  neumaton_output_lab.py.gz.b64  neumaton_output_lab_v2_candidate.py.gz.b64  neumaton_output_lab_v3_oracle.py.gz.b64  requirements.txt  restore_source.py  restore_v2.py  restore_v3.py  run_subset.py  verify_v3a.py
OutputLab/results/: experimental_N128_subset_summary.csv  live_N256_subset_summary.csv  quality_N512_summary.csv  v2_candidate_summary.csv  v3a_oracle_diagnostics.csv  v3a_oracle_summary.csv  v3a_raw_gain_N256.csv
OutputLab/v3_source/: neumaton_output_lab_v3_oracle.py.gz.b64.part00  neumaton_output_lab_v3_oracle.py.gz.b64.part01  neumaton_output_lab_v3_oracle.py.gz.b64.part02  neumaton_output_lab_v3_oracle.py.gz.b64.part03  neumaton_output_lab_v3_oracle.py.gz.b64.part04  neumaton_output_lab_v3_oracle.py.gz.b64.part05
Patches/: aut_1_scale_lock_v2.patch  aut_1_scale_lock_v2.patch.sha256  aut_1_scale_lock_v2_fixed.patch  aut_1_scale_lock_v2_fixed.patch.sha256
Resources/: sfondo4.jfif
Source/: ControlRoomPage.cpp  ControlRoomPage.h  CustomScaleEditor.cpp  CustomScaleEditor.h  CustomScalePresets.cpp  HumanDriftLookAndFeel.h  LivePitchProcessor.h  ModernPitchEngine.cpp  ModernPitchEngine.h  NeumatonLabTheme.cpp  NeumatonLabTheme.h  NeumatonOutputRenderer.cpp  NeumatonOutputRenderer.h  NeumatonOutputTypes.h  NeumatonRidgeLedger.cpp  NeumatonRidgeLedger.h  NeumatonUILabels.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Preset.cpp  Preset.h  ScaleLock.cpp  ScaleLock.h  ScaleLockPitchEngine.cpp  ScaleLockPitchEngine.h
Tests/: AutotuneCorpusDiff.cmake  BaselineProbe.cpp  CMakeLists.txt  CommercialRegression.cpp  CorpusAudioDiffRunner.cpp  CorpusRegression.cpp  LowRegisterProbe.cpp  ModernPitchEngineTests.cpp  OutputV3ScaffoldSmoke.cpp  OutputV3ShadowLedgerIdentity.cpp  OutputV3ShadowLedgerLifecycle.cpp  OutputV3ShadowRendererTrigger.txt  README.md  SanitizerSmoke.cpp  ScaleTempoStrictTest.cpp
Tests/test_stubs/: JuceHeader.h
Tools/stage_b_patch/: part00  part01
Tools/stage_b_patch_b64/: part00  part01  part02  part03  part04  part05
Tools/stage_c_payload_b64/: .manifest  .ready  part000  part001  part002  part003  part004  part005_00  part005_01  part005_02  part005_03  part005_04  part005_05  part005_06  part005_07  part005_08_09  part005_10_11  part005_33_00  part005_33_01  part005_33_02  part005_33_03  part005_34_00  part005_34_01  part005_34_02  part005_34_03  part005_35_00  part005_35_01  part005_35_02  part005_35_03  part005_36_00  part005_36_01  part005_36_02  part005_36_03  part005_37_00  part005_37_01  part005_37_02  part005_37_03  part005_38_00  part005_38_01  part005_38_02  (+1 more)
